--- a/BANDcamp2023_GP_surmise-handout.ipynb
+++ b/BANDcamp2023_GP_surmise-handout.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPLlPTvamzrR1RZpeOOimaF",
+      "authorship_tag": "ABX9TyNVQshTBIw0zc5c0USieyMU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -82,7 +82,7 @@
         "\n",
         "Aligning with the goals of an emulator: \n",
         "1. **Prediction** \n",
-        "$$ \\hat{\\mu}(\\theta) = \\mu(\\theta) + \\boldsymbol c(\\theta)^\\T C^{-1} \\boldsymbol \\mu, $$ \n",
+        "$$ \\hat{\\mu}(\\theta) = \\mu(\\theta) + \\boldsymbol c(\\theta)^\\T C^{-1} (\\mathbf{f} - \\boldsymbol \\mu), $$ \n",
         "2. **Uncertainty quantification**\n",
         "$$ \\hat{\\sigma}^2(\\theta) = c(\\theta, \\theta) - \\boldsymbol c(\\theta)^\\T C^{-1} \\boldsymbol c(\\theta),$$\n",
         "where $\\boldsymbol c(\\theta) = (c(\\theta, \\theta_1), \\ldots c(\\theta, \\theta_n))^\\T$.\n",
