--- a/BANDcamp2023_GP_surmise.ipynb
+++ b/BANDcamp2023_GP_surmise.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPugO3vlNYBwGH7C4Tpy8Hh",
+      "authorship_tag": "ABX9TyM9SBcJ117jT5yhpU7Iy9aA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -82,7 +82,7 @@
         "\n",
         "Aligning with the goals of an emulator: \n",
         "1. **Prediction** \n",
-        "$$ \\hat{\\mu}(\\theta) = \\mu(\\theta) + \\boldsymbol c(\\theta)^\\T C^{-1} \\boldsymbol \\mu, $$ \n",
+        "$$ \\hat{\\mu}(\\theta) = \\mu(\\theta) + \\boldsymbol c(\\theta)^\\T C^{-1} (\\mathbf{f} - \\boldsymbol \\mu), $$ \n",
         "2. **Uncertainty quantification**\n",
         "$$ \\hat{\\sigma}^2(\\theta) = c(\\theta, \\theta) - \\boldsymbol c(\\theta)^\\T C^{-1} \\boldsymbol c(\\theta),$$\n",
         "where $\\boldsymbol c(\\theta) = (c(\\theta, \\theta_1), \\ldots c(\\theta, \\theta_n))^\\T$.\n",
@@ -107,12 +107,12 @@
       "metadata": {
         "id": "-pmbKrxP5MxE"
       },
-      "execution_count": 206,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 207,
+      "execution_count": null,
       "metadata": {
         "id": "SJ6CuAkxZKJV",
         "colab": {
@@ -190,7 +190,7 @@
       "metadata": {
         "id": "RP6Vzi4iGQTT"
       },
-      "execution_count": 208,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -239,7 +239,7 @@
         "id": "hX_pd79L7eoo",
         "outputId": "153fb348-34cb-4720-a70b-9ee1e48fcdd8"
       },
-      "execution_count": 209,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -281,7 +281,7 @@
       "metadata": {
         "id": "ibhqrH4AIF5t"
       },
-      "execution_count": 210,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -301,7 +301,7 @@
         "id": "q3RKUbgHLmsg",
         "outputId": "f7474e4b-b45c-4566-c477-81010fa9190a"
       },
-      "execution_count": 211,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -337,7 +337,7 @@
         "id": "JlNB547oRuwp",
         "outputId": "3579ec1a-940d-4090-f33b-7dd13774a657"
       },
-      "execution_count": 212,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -367,7 +367,7 @@
         "id": "B3ZPxCTVRkhL",
         "outputId": "9300f31f-ea0a-4364-94f2-ace3982c0051"
       },
-      "execution_count": 213,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -400,7 +400,7 @@
         "id": "v2jOC5pTX4BS",
         "outputId": "fef4a516-fa2c-47b8-aced-2e3f16e23adc"
       },
-      "execution_count": 214,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -425,7 +425,7 @@
       "metadata": {
         "id": "co0cLS9YaZFS"
       },
-      "execution_count": 215,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -463,7 +463,7 @@
       "metadata": {
         "id": "asLIPzTIY0ak"
       },
-      "execution_count": 216,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -480,7 +480,7 @@
         "id": "Ey0PiXFDdwGD",
         "outputId": "c00d7bc4-44d5-49bd-eb3a-f307d22c160a"
       },
-      "execution_count": 217,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -508,7 +508,7 @@
         "id": "SGKdPNzF0IYB",
         "outputId": "b55b7735-2740-4678-d0d1-4a94da950b26"
       },
-      "execution_count": 218,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -546,7 +546,7 @@
         "id": "QdpuSwS5blbe",
         "outputId": "e4c9e00d-23cd-4a07-f6a7-9f626ca39c47"
       },
-      "execution_count": 219,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -617,7 +617,7 @@
       "metadata": {
         "id": "SzqMPkN5LGrS"
       },
-      "execution_count": 220,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -634,7 +634,7 @@
         "id": "iyuI52D5Ps_E",
         "outputId": "3415f7c1-b96d-4132-ba21-2be06842faa8"
       },
-      "execution_count": 221,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -664,7 +664,7 @@
         "id": "pJ0rm-kvQID4",
         "outputId": "cdc95647-1e14-42a3-c743-264bcfe17f14"
       },
-      "execution_count": 222,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -705,7 +705,7 @@
         "id": "MxF80P32RNj1",
         "outputId": "656e39a2-565e-4b30-f542-6ffb66c24c4b"
       },
-      "execution_count": 223,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -738,7 +738,7 @@
         },
         "outputId": "448c9dab-d4fa-483e-8162-72539c373d70"
       },
-      "execution_count": 224,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -765,7 +765,7 @@
         "id": "eK0GI0VGTgLr",
         "outputId": "3f32cf86-0e0d-48c5-f751-b3b29ccd873c"
       },
-      "execution_count": 225,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -920,7 +920,7 @@
       "metadata": {
         "id": "nYgFz6xhdwyS"
       },
-      "execution_count": 226,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -951,7 +951,7 @@
         "id": "x9UnXneqf2KR",
         "outputId": "37a28488-b9c4-4e15-9b2f-90012cf55534"
       },
-      "execution_count": 227,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -983,7 +983,7 @@
         "id": "W8bVcmqih7m1",
         "outputId": "83d393d8-9790-4354-df14-1d4388bbe656"
       },
-      "execution_count": 228,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1051,7 +1051,7 @@
       "metadata": {
         "id": "uraWU06MSB7l"
       },
-      "execution_count": 229,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1074,7 +1074,7 @@
         "id": "DGCqhTlYSMuV",
         "outputId": "92e75bc0-9c44-40d4-a4a2-258ad736f4ae"
       },
-      "execution_count": 230,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1107,7 +1107,7 @@
       "metadata": {
         "id": "AFUlKfAfypiT"
       },
-      "execution_count": 231,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1126,7 +1126,7 @@
       "metadata": {
         "id": "Lse5nuscU3YN"
       },
-      "execution_count": 232,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1155,7 +1155,7 @@
       "metadata": {
         "id": "qosEnG6-jttA"
       },
-      "execution_count": 233,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1174,7 +1174,7 @@
         "id": "-W9Ag2AyjJDO",
         "outputId": "4a26a93e-1b5b-4468-ce26-f93172525383"
       },
-      "execution_count": 234,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1203,7 +1203,7 @@
         "id": "P8t5Yf0IkNWQ",
         "outputId": "2cb5ae42-67bc-489b-bf66-77ce80714ca2"
       },
-      "execution_count": 235,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1250,7 +1250,7 @@
         "id": "S5If-VMEkcvN",
         "outputId": "90c17b70-6cd7-494c-d30a-8a1009fdc485"
       },
-      "execution_count": 236,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1303,7 +1303,7 @@
       "metadata": {
         "id": "T6bNyiJrv2g-"
       },
-      "execution_count": 237,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1333,7 +1333,7 @@
         "id": "JWEcBC_Zx_cR",
         "outputId": "acb06205-edda-421e-8214-b89a8f78fd50"
       },
-      "execution_count": 238,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1363,7 +1363,7 @@
         "id": "BAZQyxuDQaDg",
         "outputId": "24c306d8-51a8-4c4a-e67f-37aff6ea18bc"
       },
-      "execution_count": 239,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1424,7 +1424,7 @@
         "id": "BrpEnVBJFzD0",
         "outputId": "1bda87bc-33be-490b-a4cf-980e311b3b8f"
       },
-      "execution_count": 240,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1452,7 +1452,7 @@
       "metadata": {
         "id": "eY5V4MjSRMMP"
       },
-      "execution_count": 241,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1470,7 +1470,7 @@
         "id": "Io35Aj_PRmTG",
         "outputId": "950a968b-bb4c-429b-a958-ba5b8dc0b13c"
       },
-      "execution_count": 242,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1512,7 +1512,7 @@
         "id": "M7x1YWcSR1bd",
         "outputId": "9df9250a-daa0-4f83-d319-a73d05cc05d5"
       },
-      "execution_count": 243,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
