--- a/BANDcamp2023_GP_surmise-handout.ipynb
+++ b/BANDcamp2023_GP_surmise-handout.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyNVQshTBIw0zc5c0USieyMU",
+      "authorship_tag": "ABX9TyPv7fif4244fTOs2CtoeYc9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -756,14 +755,42 @@
     {
       "cell_type": "code",
       "source": [
+        "#@title plotting parameter relationship functions\n",
+        "from matplotlib import gridspec\n",
+        "def plot_theta_relationship(theta, bins=25):\n",
+        "  heatmap, xrng, yrng = np.histogram2d(theta[:, 0], theta[:, 1], bins=bins)\n",
+        "\n",
+        "  extent = [xrng[0], xrng[-1], yrng[0], yrng[-1]]\n",
+        "\n",
+        "  plt.figure(figsize=(6, 6))\n",
+        "  plt.imshow(heatmap.T, extent=extent, cmap='bone_r', aspect='auto')\n",
+        "  plt.xlabel('drag coefficient, $k$')\n",
+        "  plt.ylabel('gravitational constant, $g$')\n",
+        "\n",
+        "  plt.show()\n",
+        "  \n",
+        "def plot_theta_marginal(theta):  \n",
+        "  fig, ax = plt.subplots(1, 2, sharey=True, figsize=(8, 4))\n",
+        "  ax[0].hist(theta[:, 0], edgecolor='k')\n",
+        "  ax[1].hist(theta[:, 1], edgecolor='k')\n",
+        "  ax[0].set_xlabel('drag coefficient, $k$')\n",
+        "  ax[1].set_xlabel('gravitational constant, $g$')\n",
+        "  plt.show()"
+      ],
+      "metadata": {
+        "id": "3d8lTq2E7EDQ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#@title Visualize prior samples\n",
         "prior_samples = prior_balldrop.rnd(1000)\n",
         "\n",
-        "fig, ax = plt.subplots(1, 2)\n",
-        "ax[0].hist(prior_samples[:, 0], edgecolor='w')\n",
-        "ax[1].hist(prior_samples[:, 1], edgecolor='w')\n",
-        "ax[0].set_xlabel('drag coeffienct, $k$')\n",
-        "ax[1].set_xlabel('gravitational constant, $g$')"
+        "plot_theta_marginal(prior_samples)\n",
+        "plot_theta_relationship(prior_samples, bins=25)"
       ],
       "metadata": {
         "id": "DGCqhTlYSMuV"
@@ -806,7 +833,7 @@
       "cell_type": "code",
       "source": [
         "# plotting aid functions\n",
-        "def plot_theta(cal, whichtheta):\n",
+        "def plot_cal_theta(cal, whichtheta):\n",
         "    fig, axs = plt.subplots(1, 3, figsize=(14, 4))\n",
         "    cal_theta = cal.theta.rnd(1000) \n",
         "    axs[0].plot(cal_theta[:, whichtheta])\n",
@@ -855,6 +882,19 @@
       ],
       "metadata": {
         "id": "P8t5Yf0IkNWQ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@title Visualize the relationship between parameters\n",
+        "plot_theta_marginal(posttheta)\n",
+        "plot_theta_relationship(posttheta)"
+      ],
+      "metadata": {
+        "id": "swOHgB_d7fuc"
       },
       "execution_count": null,
       "outputs": []
