--- a/BANDcamp2023_GP_surmise-handout.ipynb
+++ b/BANDcamp2023_GP_surmise-handout.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPv7fif4244fTOs2CtoeYc9",
+      "authorship_tag": "ABX9TyOF9HbXOKnHvA1OzWAecr1Y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -605,12 +605,12 @@
         "**Only with simulation model:**\n",
         "\n",
         "If the simulation model is directly used, assuming a multivariate normal distribution, then\n",
-        "$$p(\\boldsymbol y~|~\\theta) = (2\\pi)^{-\\frac{nm}{2}} |\\Sigma_\\epsilon|^{-\\frac{1}{2}} \\exp\\left\\{-\\frac{1}{2} (\\boldsymbol y - \\boldsymbol f(\\theta))^\\T \\Sigma_\\epsilon^{-1} (\\boldsymbol y - \\boldsymbol f(\\theta)) \\right\\}. $$\n",
+        "$$p(\\boldsymbol y~|~\\theta) = (2\\pi)^{-\\frac{m}{2}} |\\Sigma_\\epsilon|^{-\\frac{1}{2}} \\exp\\left\\{-\\frac{1}{2} (\\boldsymbol y - \\boldsymbol f(\\theta))^\\T \\Sigma_\\epsilon^{-1} (\\boldsymbol y - \\boldsymbol f(\\theta)) \\right\\}. $$\n",
         "\n",
         "**Simulation model with emulator:**\n",
         "\n",
         "If a GP emulator is used, then \n",
-        "$$p(\\boldsymbol y~|~\\theta) = (2\\pi)^{-\\frac{nm}{2}} |\\Sigma_\\epsilon + \\Sigma_f|^{-\\frac{1}{2}} \\exp\\left\\{-\\frac{1}{2} (\\boldsymbol y - \\boldsymbol f(\\theta))^\\T (\\Sigma_\\epsilon + \\Sigma_f(\\theta))^{-1} (\\boldsymbol y - \\boldsymbol f(\\theta)) \\right\\}. $$"
+        "$$p(\\boldsymbol y~|~\\theta) = (2\\pi)^{-\\frac{m}{2}} |\\Sigma_\\epsilon + \\Sigma_f(\\theta)|^{-\\frac{1}{2}} \\exp\\left\\{-\\frac{1}{2} (\\boldsymbol y - \\boldsymbol f(\\theta))^\\T (\\Sigma_\\epsilon + \\Sigma_f(\\theta))^{-1} (\\boldsymbol y - \\boldsymbol f(\\theta)) \\right\\}. $$"
       ],
       "metadata": {
         "id": "EltaYOURRwLb"
